boilerplate setup docker fix