@@ -3,6 +3,10 @@ COPY . .
 RUN mvn clean package -DskipTests
 
 FROM openjdk:22-jdk-slim
+
+# Set JVM options
+ENV JAVA_OPTS="--add-opens=java.base/java.lang=ALL-UNNAMED"
+
 COPY --from=build /target/dao-0.0.1-SNAPSHOT.jar dao.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","dao.jar"]
